--- a/T2F/requirements.txt
+++ b/T2F/requirements.txt
@@ -3,6 +3,7 @@ Django==4.2.15
 django-bootstrap5==24.2
 Pillow==9.3.0
 psycopg2-binary==2.9.9
+python-dotenv==1.0.1
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.1
